# meta-api

./: CMakeLists.txt
include/: forwardindexserver.h  generate-headers.sh  invertedindexserver.h
specs/: forward_index.json  inverted_index.json
src/: main.cpp
